--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "sass": "^1.69.5",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "@types/animejs": "^3.1.12",
     "path": "^0.12.7",
-    "scss": "^0.2.4"
+    "sass": "^1.69.5",
+    "scss": "^0.2.4",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   },
   "dependencies": {
+    "animejs": "^3.2.2"
   }
 }
